- add durability loss when cooling lava - add randomization to cooling transition